# CyberAttackDetection

./: .env.example  .gitignore  README.md  cyberattackdetection.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.claude/: settings.local.json
config/: default.toml  local.toml
installer/: setup.iss
scripts/: build_installer.ps1  fix_suricata_rules.ps1  generate_icon.py  install_all.ps1  install_suricata.ps1  install_sysmon.ps1  simulate_attack.py
src/: main.py
src/analysis/: aggregator.py  baseline.py  correlator.py  scorer.py  whitelist.py
src/core/: config.py  database.py  enums.py  event_bus.py  exceptions.py  logging_setup.py  models.py  subprocess_utils.py
src/detectors/: base.py  eventlog_detector.py  filesystem_detector.py  network_detector.py  process_detector.py  suricata_detector.py
src/forensics/: evidence_store.py  file_hasher.py  registry_snapshot.py  report_generator.py  snapshot.py  timeline.py
src/intel/: dns_lookup.py  geoip.py  intel_aggregator.py  osint.py  traceroute.py  whois_lookup.py
src/response/: base.py  firewall.py  network_isolate.py  process_kill.py  quarantine.py  response_executor.py  rollback_manager.py
src/ui/: app.py  bridge.py  console.py  theme.py
tests/: conftest.py
tests/fixtures/: sample_events.py  sample_processes.py  sample_suricata.py
tests/unit/: test_analysis.py  test_config.py  test_console.py  test_database.py  test_detectors.py  test_detectors_extended.py  test_enums.py  test_event_bus.py  test_forensics.py  test_forensics_extended.py  test_intel.py  test_intel_extended.py  (+5 more)
(+11 files in other folders)
